--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,14 +1,27 @@
 .container {
   display: flex;
   flex-direction: column;
+
+  height: 100%;
+
+  background-image: url("../assets/climbing.jpg");
+  background-repeat: no-repeat;
+
+  color: white;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
 
-  height: 60vh;
+  flex: 1;
+
   width: 50%;
 
   padding-left: 50px;
 }
 
-.container button {
+.header button {
   width: 20%;
 }
