--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -13,3 +13,13 @@
   justify-content: space-between;
   width: 30%;
 }
+
+ul {
+  list-style-type: none;
+}
+
+a,
+a:visited {
+  text-decoration: inherit;
+  color: inherit;
+}
