added styling to Product components, increased row gap on product list

--- a/src/styles/Shop.module.css
+++ b/src/styles/Shop.module.css
@@ -3,4 +3,7 @@
   grid-template-columns: repeat(3, 1fr);
   justify-items: center;
   align-items: stretch;
+  row-gap: 60px;
+
+  margin-top: 5%;
 }
