added more basic styling

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,10 +1,13 @@
 @font-face {
-  font-family: Roboto-Bold;
-  src: url("../assets/roboto-font/Roboto-Bold.ttf");
+  font-family: Roboto-Regular;
+  src: url("../assets/roboto-font/Roboto-Regular.ttf");
 }
 
 .container {
-  height: 150px;
+  background-color: rgb(224, 224, 224);
+  color: black;
+
+  height: 100px;
 
   display: flex;
   justify-content: space-between;
@@ -14,8 +17,8 @@
 }
 
 .container div:first-child {
-  font-family: Roboto-Bold;
-  font-size: 5em;
+  font-family: Roboto-Regular;
+  font-size: 3em;
   letter-spacing: 3px;
 }
 
@@ -24,7 +27,7 @@
   justify-content: space-between;
   width: 30%;
 
-  font-family: Roboto-Bold;
+  font-family: Roboto-Regular;
   font-size: 1.5em;
 }
 
@@ -36,4 +39,5 @@ a,
 a:visited {
   text-decoration: inherit;
   color: inherit;
+  padding: 10px;
 }
