--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -11,11 +11,13 @@
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 
   height: 100%;
 
   background-image: url("../assets/climbing.jpg");
   background-repeat: no-repeat;
+  background-position: 0% -70%;
 
   font-family: Roboto-Regular;
   color: rgb(255, 255, 255);
@@ -26,14 +28,21 @@
   flex-direction: column;
   justify-content: center;
 
-  flex: 1;
+  margin-bottom: 12%;
+  margin-left: 75px;
 
-  width: 50%;
+  color: black;
+  background-color: rgb(224, 224, 224);
+
+  width: 40%;
+  height: 40%;
 
   padding-left: 50px;
 
-  font-family: Roboto-Bold;
-  font-size: 1.3em;
+  font-family: Roboto-Regular;
+  font-size: 1.1em;
+
+  border-radius: 10px;
 }
 
 h1 {
