--- a/src/styles/Product.module.css
+++ b/src/styles/Product.module.css
@@ -13,36 +13,36 @@
   flex-direction: column;
 }
 
-.imgContainer {
+.container:first-child {
   display: flex;
   justify-content: center;
   align-items: center;
   flex: 1;
 }
 
-.infoContainer {
+.container div:nth-child(2) {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.infoContainer h3 {
+.container div:nth-child(2) h3 {
   font-family: "Roboto Bold";
   margin: 20px 0;
   font-size: 1.5em;
 }
 
-.infoContainer span,
-.infoContainer button {
+.container div:nth-child(2) span,
+.container div:nth-child(2) button {
   font-family: Roboto;
 }
 
-.infoContainer span {
+.container div:nth-child(2) span {
   font-size: 2em;
   margin-bottom: 20px;
 }
 
-.infoContainer button {
+.container div:nth-child(2) button {
   color: white;
   background-color: #218737;
   border: none;
