--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -35,8 +35,8 @@ ul {
   list-style-type: none;
 }
 
-a,
-a:visited {
+li a,
+li a:visited {
   text-decoration: inherit;
   color: inherit;
   padding: 10px;
